--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "lucide-react": "^0.414.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
